tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__ieee__copysign2.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/ieee__copysign2.c" (c, x86_64-unknown-linux-gnu)
global Yf : float[8] = [2.000000e+00, -2.000000e+00, -2.000000e+00, -2.000000e+00, -2.000000e+00, 2.000000e+00, -0.000000e+00, 0x7F800000] [internal, default, align 16, dso_local]
global Zf : float[8] = [1.000000e+00, -1.000000e+00, -1.000000e+00, -0.000000e+00, -0.000000e+00, 0.000000e+00, 0xFF800000, 0x7FC00000] [internal, default, align 16, dso_local, constant]
global Y : double[8] = [2.000000e+00, -2.000000e+00, -2.000000e+00, -2.000000e+00, -2.000000e+00, 2.000000e+00, -0.000000e+00, 0x7FF0000000000000] [internal, default, align 16, dso_local]
global Z : double[8] = [1.000000e+00, -1.000000e+00, -1.000000e+00, -0.000000e+00, -0.000000e+00, 0.000000e+00, 0xFFF0000000000000, 0x7FF8000000000000] [internal, default, align 16, dso_local, constant]
global Yl : long_double<f80>[8] = [2.000000e+00, -2.000000e+00, -2.000000e+00, -2.000000e+00, -2.000000e+00, 2.000000e+00, -0.000000e+00, 0x7FFF8000000000000000] [internal, default, align 16, dso_local]
global Zl : long_double<f80>[8] = [1.000000e+00, -1.000000e+00, -1.000000e+00, -0.000000e+00, -0.000000e+00, 0.000000e+00, 0xFFFF8000000000000000, 0x7FFFC000000000000000] [internal, default, align 16, dso_local, constant]

fn memcmp(%arg0: void*, %arg1: void*, %arg2: u64i) -> s32i [external, c, pure, nothrow];
fn abort() -> void [external, c, nothrow];
fn testf() -> void [external, c, no_inline, dso_local, nothrow] {
    %184 = alloca float[8], "r", align 16
    %185 = alloca s32i, "i", align 4
    %186 = const 1.000000e+00 : double
    %187 = cast(floating) %186 : float
    %188 = const 0 : s64i
    %189 = get_global @Yf : float[8]*
    %190 = get_element %189[%188] : float*
    %191 = load %190 : float, align 16
    %192 = copysign %187, %191 : float
    %193 = const 0 : s64i
    %194 = get_element %184[%193] : float*
    store %192, %194, align 16
    %195 = const 1.000000e+00 : double
    %196 = cast(floating) %195 : float
    %197 = const 1 : s64i
    %198 = get_global @Yf : float[8]*
    %199 = get_element %198[%197] : float*
    %200 = load %199 : float, align 4
    %201 = copysign %196, %200 : float
    %202 = const 1 : s64i
    %203 = get_element %184[%202] : float*
    store %201, %203, align 4
    %204 = const -1.000000e+00 : double
    %205 = cast(floating) %204 : float
    %206 = const 2 : s64i
    %207 = get_global @Yf : float[8]*
    %208 = get_element %207[%206] : float*
    %209 = load %208 : float, align 8
    %210 = copysign %205, %209 : float
    %211 = const 2 : s64i
    %212 = get_element %184[%211] : float*
    store %210, %212, align 8
    %213 = const 0.000000e+00 : double
    %214 = cast(floating) %213 : float
    %215 = const 3 : s64i
    %216 = get_global @Yf : float[8]*
    %217 = get_element %216[%215] : float*
    %218 = load %217 : float, align 4
    %219 = copysign %214, %218 : float
    %220 = const 3 : s64i
    %221 = get_element %184[%220] : float*
    store %219, %221, align 4
    %222 = const -0.000000e+00 : double
    %223 = cast(floating) %222 : float
    %224 = const 4 : s64i
    %225 = get_global @Yf : float[8]*
    %226 = get_element %225[%224] : float*
    %227 = load %226 : float, align 16
    %228 = copysign %223, %227 : float
    %229 = const 4 : s64i
    %230 = get_element %184[%229] : float*
    store %228, %230, align 16
    %231 = const -0.000000e+00 : double
    %232 = cast(floating) %231 : float
    %233 = const 5 : s64i
    %234 = get_global @Yf : float[8]*
    %235 = get_element %234[%233] : float*
    %236 = load %235 : float, align 4
    %237 = copysign %232, %236 : float
    %238 = const 5 : s64i
    %239 = get_element %184[%238] : float*
    store %237, %239, align 4
    %240 = const 0x7F800000 : float
    %241 = const 6 : s64i
    %242 = get_global @Yf : float[8]*
    %243 = get_element %242[%241] : float*
    %244 = load %243 : float, align 8
    %245 = copysign %240, %244 : float
    %246 = const 6 : s64i
    %247 = get_element %184[%246] : float*
    store %245, %247, align 8
    %248 = const 0xFFC00000 : float
    %249 = const 7 : s64i
    %250 = get_global @Yf : float[8]*
    %251 = get_element %250[%249] : float*
    %252 = load %251 : float, align 4
    %253 = copysign %248, %252 : float
    %254 = const 7 : s64i
    %255 = get_element %184[%254] : float*
    store %253, %255, align 4
    scope {
        %256 = const 0 : s32i
        store %256, %185, align 4
        for cond: {
            %274 = load %185 : s32i, align 4
            %275 = const 8 : s32i
            %276 = cmp lt %274, %275 : bool
            condition %276
        } step: {
            %257 = load %185 : s32i, align 4
            %258 = inc %257 : s32i [nsw]
            store %258, %185, align 4
            yield
        } do {
            scope {
                %259 = get_global @memcmp : ((void*, void*, u64i) -> s32i)*
                %260 = cast(array_to_ptrdecay) %184 : float*
                %261 = load %185 : s32i, align 4
                %262 = ptr_stride %260, %261 : float*
                %263 = cast(bitcast) %262 : void*
                %264 = get_global @Zf : float[8]*
                %265 = cast(array_to_ptrdecay) %264 : float*
                %266 = load %185 : s32i, align 4
                %267 = ptr_stride %265, %266 : float*
                %268 = cast(bitcast) %267 : void*
                %269 = const 4 : u64i
                %270 = call @memcmp(%263, %268, %269) : s32i [pure]
                %271 = const 0 : s32i
                %272 = cmp ne %270, %271 : bool
                if %272 {
                    %273 = get_global @abort : (() -> void)*
                    call @abort() [all]
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    return
}
fn test() -> void [external, c, no_inline, dso_local, nothrow] {
    %97 = alloca double[8], "r", align 16
    %98 = alloca s32i, "i", align 4
    %99 = const 1.000000e+00 : double
    %100 = const 0 : s64i
    %101 = get_global @Y : double[8]*
    %102 = get_element %101[%100] : double*
    %103 = load %102 : double, align 16
    %104 = copysign %99, %103 : double
    %105 = const 0 : s64i
    %106 = get_element %97[%105] : double*
    store %104, %106, align 16
    %107 = const 1.000000e+00 : double
    %108 = const 1 : s64i
    %109 = get_global @Y : double[8]*
    %110 = get_element %109[%108] : double*
    %111 = load %110 : double, align 8
    %112 = copysign %107, %111 : double
    %113 = const 1 : s64i
    %114 = get_element %97[%113] : double*
    store %112, %114, align 8
    %115 = const -1.000000e+00 : double
    %116 = const 2 : s64i
    %117 = get_global @Y : double[8]*
    %118 = get_element %117[%116] : double*
    %119 = load %118 : double, align 16
    %120 = copysign %115, %119 : double
    %121 = const 2 : s64i
    %122 = get_element %97[%121] : double*
    store %120, %122, align 16
    %123 = const 0.000000e+00 : double
    %124 = const 3 : s64i
    %125 = get_global @Y : double[8]*
    %126 = get_element %125[%124] : double*
    %127 = load %126 : double, align 8
    %128 = copysign %123, %127 : double
    %129 = const 3 : s64i
    %130 = get_element %97[%129] : double*
    store %128, %130, align 8
    %131 = const -0.000000e+00 : double
    %132 = const 4 : s64i
    %133 = get_global @Y : double[8]*
    %134 = get_element %133[%132] : double*
    %135 = load %134 : double, align 16
    %136 = copysign %131, %135 : double
    %137 = const 4 : s64i
    %138 = get_element %97[%137] : double*
    store %136, %138, align 16
    %139 = const -0.000000e+00 : double
    %140 = const 5 : s64i
    %141 = get_global @Y : double[8]*
    %142 = get_element %141[%140] : double*
    %143 = load %142 : double, align 8
    %144 = copysign %139, %143 : double
    %145 = const 5 : s64i
    %146 = get_element %97[%145] : double*
    store %144, %146, align 8
    %147 = const 0x7FF0000000000000 : double
    %148 = const 6 : s64i
    %149 = get_global @Y : double[8]*
    %150 = get_element %149[%148] : double*
    %151 = load %150 : double, align 16
    %152 = copysign %147, %151 : double
    %153 = const 6 : s64i
    %154 = get_element %97[%153] : double*
    store %152, %154, align 16
    %155 = const 0xFFF8000000000000 : double
    %156 = const 7 : s64i
    %157 = get_global @Y : double[8]*
    %158 = get_element %157[%156] : double*
    %159 = load %158 : double, align 8
    %160 = copysign %155, %159 : double
    %161 = const 7 : s64i
    %162 = get_element %97[%161] : double*
    store %160, %162, align 8
    scope {
        %163 = const 0 : s32i
        store %163, %98, align 4
        for cond: {
            %181 = load %98 : s32i, align 4
            %182 = const 8 : s32i
            %183 = cmp lt %181, %182 : bool
            condition %183
        } step: {
            %164 = load %98 : s32i, align 4
            %165 = inc %164 : s32i [nsw]
            store %165, %98, align 4
            yield
        } do {
            scope {
                %166 = get_global @memcmp : ((void*, void*, u64i) -> s32i)*
                %167 = cast(array_to_ptrdecay) %97 : double*
                %168 = load %98 : s32i, align 4
                %169 = ptr_stride %167, %168 : double*
                %170 = cast(bitcast) %169 : void*
                %171 = get_global @Z : double[8]*
                %172 = cast(array_to_ptrdecay) %171 : double*
                %173 = load %98 : s32i, align 4
                %174 = ptr_stride %172, %173 : double*
                %175 = cast(bitcast) %174 : void*
                %176 = const 8 : u64i
                %177 = call @memcmp(%170, %175, %176) : s32i [pure]
                %178 = const 0 : s32i
                %179 = cmp ne %177, %178 : bool
                if %179 {
                    %180 = get_global @abort : (() -> void)*
                    call @abort() [all]
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    return
}
fn testl() -> void [external, c, no_inline, dso_local, nothrow] {
    %4 = alloca long_double<f80>[8], "r", align 16
    %5 = alloca s32i, "i", align 4
    %6 = const 1.000000e+00 : double
    %7 = cast(floating) %6 : long_double<f80>
    %8 = const 0 : s64i
    %9 = get_global @Yl : long_double<f80>[8]*
    %10 = get_element %9[%8] : long_double<f80>*
    %11 = load %10 : long_double<f80>, align 16
    %12 = copysign %7, %11 : long_double<f80>
    %13 = const 0 : s64i
    %14 = get_element %4[%13] : long_double<f80>*
    store %12, %14, align 16
    %15 = const 1.000000e+00 : double
    %16 = cast(floating) %15 : long_double<f80>
    %17 = const 1 : s64i
    %18 = get_global @Yl : long_double<f80>[8]*
    %19 = get_element %18[%17] : long_double<f80>*
    %20 = load %19 : long_double<f80>, align 16
    %21 = copysign %16, %20 : long_double<f80>
    %22 = const 1 : s64i
    %23 = get_element %4[%22] : long_double<f80>*
    store %21, %23, align 16
    %24 = const -1.000000e+00 : double
    %25 = cast(floating) %24 : long_double<f80>
    %26 = const 2 : s64i
    %27 = get_global @Yl : long_double<f80>[8]*
    %28 = get_element %27[%26] : long_double<f80>*
    %29 = load %28 : long_double<f80>, align 16
    %30 = copysign %25, %29 : long_double<f80>
    %31 = const 2 : s64i
    %32 = get_element %4[%31] : long_double<f80>*
    store %30, %32, align 16
    %33 = const 0.000000e+00 : double
    %34 = cast(floating) %33 : long_double<f80>
    %35 = const 3 : s64i
    %36 = get_global @Yl : long_double<f80>[8]*
    %37 = get_element %36[%35] : long_double<f80>*
    %38 = load %37 : long_double<f80>, align 16
    %39 = copysign %34, %38 : long_double<f80>
    %40 = const 3 : s64i
    %41 = get_element %4[%40] : long_double<f80>*
    store %39, %41, align 16
    %42 = const -0.000000e+00 : double
    %43 = cast(floating) %42 : long_double<f80>
    %44 = const 4 : s64i
    %45 = get_global @Yl : long_double<f80>[8]*
    %46 = get_element %45[%44] : long_double<f80>*
    %47 = load %46 : long_double<f80>, align 16
    %48 = copysign %43, %47 : long_double<f80>
    %49 = const 4 : s64i
    %50 = get_element %4[%49] : long_double<f80>*
    store %48, %50, align 16
    %51 = const -0.000000e+00 : double
    %52 = cast(floating) %51 : long_double<f80>
    %53 = const 5 : s64i
    %54 = get_global @Yl : long_double<f80>[8]*
    %55 = get_element %54[%53] : long_double<f80>*
    %56 = load %55 : long_double<f80>, align 16
    %57 = copysign %52, %56 : long_double<f80>
    %58 = const 5 : s64i
    %59 = get_element %4[%58] : long_double<f80>*
    store %57, %59, align 16
    %60 = const 0x7FFF8000000000000000 : long_double<f80>
    %61 = const 6 : s64i
    %62 = get_global @Yl : long_double<f80>[8]*
    %63 = get_element %62[%61] : long_double<f80>*
    %64 = load %63 : long_double<f80>, align 16
    %65 = copysign %60, %64 : long_double<f80>
    %66 = const 6 : s64i
    %67 = get_element %4[%66] : long_double<f80>*
    store %65, %67, align 16
    %68 = const 0xFFFFC000000000000000 : long_double<f80>
    %69 = const 7 : s64i
    %70 = get_global @Yl : long_double<f80>[8]*
    %71 = get_element %70[%69] : long_double<f80>*
    %72 = load %71 : long_double<f80>, align 16
    %73 = copysign %68, %72 : long_double<f80>
    %74 = const 7 : s64i
    %75 = get_element %4[%74] : long_double<f80>*
    store %73, %75, align 16
    scope {
        %76 = const 0 : s32i
        store %76, %5, align 4
        for cond: {
            %94 = load %5 : s32i, align 4
            %95 = const 8 : s32i
            %96 = cmp lt %94, %95 : bool
            condition %96
        } step: {
            %77 = load %5 : s32i, align 4
            %78 = inc %77 : s32i [nsw]
            store %78, %5, align 4
            yield
        } do {
            scope {
                %79 = get_global @memcmp : ((void*, void*, u64i) -> s32i)*
                %80 = cast(array_to_ptrdecay) %4 : long_double<f80>*
                %81 = load %5 : s32i, align 4
                %82 = ptr_stride %80, %81 : long_double<f80>*
                %83 = cast(bitcast) %82 : void*
                %84 = get_global @Zl : long_double<f80>[8]*
                %85 = cast(array_to_ptrdecay) %84 : long_double<f80>*
                %86 = load %5 : s32i, align 4
                %87 = ptr_stride %85, %86 : long_double<f80>*
                %88 = cast(bitcast) %87 : void*
                %89 = const 10 : u64i
                %90 = call @memcmp(%83, %88, %89) : s32i [pure]
                %91 = const 0 : s32i
                %92 = cmp ne %90, %91 : bool
                if %92 {
                    %93 = get_global @abort : (() -> void)*
                    call @abort() [all]
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    call @testf() [all]
    call @test() [all]
    call @testl() [all]
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
